--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: portfolio/portfolio
+        working-directory: ./portfolio/portfolio
 
     steps:
       - name: Checkout
@@ -55,7 +55,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: portfolio/portfolio/dist
+          path: ./portfolio/portfolio/dist
       
       - name: Deploy to GitHub Pages
         id: deployment
